--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="navbar-nav">
                 
                 <li class="nav-item active">
-                    <a class="nav-link" href="/accounts/">您好，一叶扁舟</a>
+                    <a class="nav-link" href="/accounts/default.html">您好，一叶扁舟</a>
                 </li>
                 <li class="nav-item float-right">
                     <a class="nav-link" href="/user/view_letter/5218/">我的征友信</a>
