--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
       <div class="further-info">
         <!-- 插入包含 srcsets 和 sizes 属性的图像 -->
-        <!--srcsets='firefoxlogo120.png 1.08w,firefoxlogo400.png 12w'
-             sizes='(max-width:480px) 120px, 400px'-->
+        <!---->
         <a href="https://www.mozilla.org/zh-CN/firefox/new/">
-          <img
+          <img srcsets='firefoxlogo120.png 1.08w,firefoxlogo400.png 12w'
+               sizes='(max-width:480px) 120px, 400px'
                src="firefoxlogo400.png"
                alt="firefox's logo">
         </a>
-        <!--srcsets='mozilla-dinosaur-head120.png 1.08w, mozilla-dinosaur-head400.png 12w'
-             sizes='(max-width:480px) 120px, 400px' -->
+        <!-- -->
         <a href="https://www.mozilla.org/">
-          <img
+          <img srcsets='mozilla-dinosaur-head120.png 1.08w, mozilla-dinosaur-head400.png 12w'
+               sizes='(max-width:480px) 120px, 400px'
                src="mozilla-dinosaur-head400.png"
                alt="mozilla dinosaur head">
 
@@ -46,8 +46,10 @@
         <!--srcsets='firefox-addons120.jpg 1.08w,firefox-addons400.jpg'
              sizes='(max-width:480px) 120px,400px'-->
         <a href="https://addons.mozilla.org/">
-          <img
-               src='firefox-addons400.jpg' alt="firefox addons">
+          <img srcsets='firefox-addons120.jpg 1.08w,firfox-addons400 12w'
+               sizes='(max-width:480px) 120px,400px'
+               src='firefox-addons400.jpg'
+               alt="firefox addons">
         </a>
         <a href="https://developer.mozilla.org/zh-CN/">
           <img src="images/mdn.svg"
@@ -58,7 +60,9 @@
 
       <div class="red-panda">
         <!-- 插入照片元素 -->
-        <img src='red-panda1200.jpg' alt='red panda'>
+        <img srcsets='red-panda600.jpg 38.7w,red-panda1200 58.2w'
+        sizes='(max-width:480) 120px,400px'
+        src='red-panda1200.jpg' alt='red panda'>
       </div>
 
     </main>
