srcset and sizes

--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
       </div>
 
       <div class="red-panda">
-        <!-- 插入照片元素 -->
-        <img srcsets='red-panda600.jpg 38.7w,red-panda1200 58.2w'
-        sizes='(max-width:480) 120px,400px'
-        src='red-panda1200.jpg' alt='red panda'>
+        <!-- 插入照片元素 src='red-panda1200.jpg' >-->
+        <img srcset='red-panda600.jpg 600w, red-panda1200.jpg 1200w'
+        sizes='(max-width: 480px) 600px, 1200px'
+        alt='red panda'
+        >
       </div>
 
     </main>
