--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Mozilla</h1>
       <!-- 插入 <img> 元素，链接至较小的 Firefox 标志。 -->
-      <img src="firefoxlogo400.png" title="火狐的图标">
+      <img src="firefoxlogo120.png" title="火狐的图标">
     </header>
 
     <main>
@@ -30,40 +30,39 @@
         <!-- 插入包含 srcsets 和 sizes 属性的图像 -->
         <!---->
         <a href="https://www.mozilla.org/zh-CN/firefox/new/">
-          <img srcsets='firefoxlogo120.png 1.08w,firefoxlogo400.png 12w'
-               sizes='(max-width:480px) 120px, 400px'
-               src="firefoxlogo400.png"
-               alt="firefox's logo">
+          <picture>
+            <source media="(max-width:480px)" srcset='firefoxlogo120.png'>
+            <img src='firefoxlogo400.png' alt="firefox's logo">
+          </picture>
         </a>
         <!-- -->
         <a href="https://www.mozilla.org/">
-          <img srcsets='mozilla-dinosaur-head120.png 1.08w, mozilla-dinosaur-head400.png 12w'
-               sizes='(max-width:480px) 120px, 400px'
-               src="mozilla-dinosaur-head400.png"
-               alt="mozilla dinosaur head">
-
+          <picture>
+            <source media="(max-width:480px)" srcset='mozilla-dinosaur-head120.png'>
+            <img src="mozilla-dinosaur-head400.png" alt="mozilla dinosaur head">
+          </picture>
         </a>
         <!--srcsets='firefox-addons120.jpg 1.08w,firefox-addons400.jpg'
              sizes='(max-width:480px) 120px,400px'-->
         <a href="https://addons.mozilla.org/">
-          <img srcsets='firefox-addons120.jpg 1.08w,firfox-addons400 12w'
-               sizes='(max-width:480px) 120px,400px'
-               src='firefox-addons400.jpg'
+          <picture>
+            <source media="(max-width:480px)" srcset='firefox-addons120.jpg'>
+          <img src='firefox-addons400.jpg'
                alt="firefox addons">
+          </picture>
         </a>
         <a href="https://developer.mozilla.org/zh-CN/">
-          <img src="images/mdn.svg"
-               alt='mdn logo'>
+          <img src="images/mdn.svg" alt='mdn logo'>
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
         <!-- 插入照片元素 src='red-panda1200.jpg' >-->
-        <img srcset='red-panda600.jpg 600w, red-panda1200.jpg 1200w'
-        sizes='(max-width: 480px) 600px, 1200px'
-        alt='red panda'
-        >
+        <picture>
+          <source media="(max-width:600px)" srcset='red-panda600.jpg'>
+          <img src='red-panda1200.jpg' alt="a lovely panda">
+        </picture>
       </div>
 
     </main>
